refactor: Constructor